--- a/client/src/css/Modify.css
+++ b/client/src/css/Modify.css
@@ -37,3 +37,13 @@
 .name-container button:hover {
   background-color: #006eff;  
 }
+
+
+.btn-modi {
+  width: 70px;
+  justify-content: center;
+  background-color: #006eff; 
+  border-radius: 4px;
+  color: #fff;
+  margin-top: 20px;
+}
